classDiagram
    %% Abstract Products
    class Car {
        <<abstract>>
        +getCarName() String
        +getCarFeatures() String
    }
    
    class SUV {
        <<abstract>>
        +getSUVName() String
        +getSUVFeatures() String
    }
    
    class Minivan {
        <<abstract>>
        +getMinivanName() String
        +getMinivanFeatures() String
    }
    
    %% Concrete Products - Luxury
    class LuxuryCar {
        -name: String
        +__init__(cName)
        +getCarName() String
        +getCarFeatures() String
    }
    
    class LuxurySUV {
        -name: String
        +__init__(sName)
        +getSUVName() String
        +getSUVFeatures() String
    }
    
    class LuxuryMinivan {
        -name: String
        +__init__(mName)
        +getMinivanName() String
        +getMinivanFeatures() String
    }
    
    %% Concrete Products - Non-Luxury
    class NonLuxuryCar {
        -name: String
        +__init__(cName)
        +getCarName() String
        +getCarFeatures() String
    }
    
    class NonLuxurySUV {
        -name: String
        +__init__(sName)
        +getSUVName() String
        +getSUVFeatures() String
    }
    
    class NonLuxuryMinivan {
        -name: String
        +__init__(mName)
        +getMinivanName() String
        +getMinivanFeatures() String
    }
    
    %% Abstract Factory
    class VehicleFactory {
        <<abstract>>
        +LUXURY_VEHICLE: String$
        +NON_LUXURY_VEHICLE: String$
        +getCar() Car*
        +getSUV() SUV*
        +getMiniVan() Minivan*
        +getVehicleFactory(tipo)$ VehicleFactory
    }
    
    %% Concrete Factories
    class LuxuryVehicleFactory {
        +__init__()
        +getCar() Car
        +getSUV() SUV
        +getMiniVan() Minivan
    }
    
    class NonLuxuryVehicleFactory {
        +__init__()
        +getCar() Car
        +getSUV() SUV
        +getMiniVan() Minivan
    }
    
    %% UI and Client
    class AutoSearchUI {
        -cmbVehicleCategory: Combobox
        -cmbVehicleType: Combobox
        -lblVehicleCategory: Label
        -lblVehicleType: Label
        -lblCarName: Label
        -lblCarNameValue: Label
        -openButton: Button
        -exitButton: Button
        +SEARCH: String$
        +EXIT: String$
        +CAR: String$
        +SUV: String$
        +MiniVan: String$
        +__init__(master)
        +getExitButton() Button
        +getOpenButton() Button
        +getCmbVehicleCategory() Combobox
        +getCmbVehicleType() Combobox
        +getLblCarNameValue() Label
        +setText(s)
    }
    
    class ButtonHandler {
        -root: Tk
        -frame: AutoSearchUI
        +__init__(root)
        +eventExitButton()
        +eventOpenButton()
    }
    
    %% Inheritance relationships
    Car <|-- LuxuryCar
    Car <|-- NonLuxuryCar
    SUV <|-- LuxurySUV
    SUV <|-- NonLuxurySUV
    Minivan <|-- LuxuryMinivan
    Minivan <|-- NonLuxuryMinivan
    
    VehicleFactory <|-- LuxuryVehicleFactory
    VehicleFactory <|-- NonLuxuryVehicleFactory
    
    %% Factory creates Products
    VehicleFactory ..> Car : creates
    VehicleFactory ..> SUV : creates
    VehicleFactory ..> Minivan : creates
    
    LuxuryVehicleFactory ..> LuxuryCar : creates
    LuxuryVehicleFactory ..> LuxurySUV : creates
    LuxuryVehicleFactory ..> LuxuryMinivan : creates
    
    NonLuxuryVehicleFactory ..> NonLuxuryCar : creates
    NonLuxuryVehicleFactory ..> NonLuxurySUV : creates
    NonLuxuryVehicleFactory ..> NonLuxuryMinivan : creates
    
    %% Client relationships
    ButtonHandler o-- AutoSearchUI : uses
    ButtonHandler ..> VehicleFactory : uses
    ButtonHandler ..> Car : uses
    ButtonHandler ..> SUV : uses
    ButtonHandler ..> Minivan : uses